fix: Add spacing when <p> follows <ul>

--- a/nextjs/src/app/text.css
+++ b/nextjs/src/app/text.css
@@ -90,6 +90,10 @@
             @apply border-l-4 border-quote-primary pl-4;
         }
 
+        ul+p {
+            @apply mt-4;
+        }
+
         p {
             &:not(:last-child) {
                 @apply mb-4;
